@@ -13,7 +13,7 @@ Second Edition, Sage, 2011.
 \tabular{ll}{
 Package: \tab car\cr
 Version: \tab 2.0-13\cr
-Date: \tab 2012/04/24\cr
+Date: \tab 2012/05/31\cr
 Depends: \tab R (>= 2.1.1), stats, graphics, MASS, nnet\cr
 Suggests: \tab  alr3, leaps, lme4, lmtest, nlme, sandwich, mgcv, pbkrtest, rgl, survival, survey\cr
 License: \tab GPL (>= 2)\cr
